--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Play these games if Scratch is blocked for you. They are all compiled through Turbowarp.</h1>
-<a href="/appel">Appel Platformer by Griffpatch</a>
+<a href="/pacman">Pac-Man Online</a>
 <a href="/appel">Appel Platformer by Griffpatch</a>
 </body>
 </html>
