--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>Play these games if Scratch is blocked for you. They are all compiled through Turbowarp.</h1>
-<a href="/pacman">Pac-Man Online<br></a>
-<a href="/appel">Appel Platformer by Griffpatch</a>
+<h1>Play these games because they are unblocked for you.</h1>
+<a href="/yoloswag3368/pacman">Pac-Man Online</a><br>
 </body>
 </html>
