--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 
 <h1>Play these games because they are unblocked for you.</h1>
-<a href="/YoloSwag3368/pacman">Pac-Man Online</a><br>
+<a href="/pacman">Pac-Man Online</a><br>
 </body>
 </html>
