--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1>Play these games because they are unblocked for you.</h1>
-<a href="/GameHub/pacman">Pac-Man Online</a><br>
+<a href="/GameHub/pacman">Pac-Man</a><br>
+<a href="/GameHub/chess">Chess</a><br>
 </body>
 </html>
