--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>Play these games because they are unblocked for you.</h1>
 <a href="/GameHub/pacman">Pac-Man</a><br>
 <a href="/GameHub/chess">Chess</a><br>
+<a href="/GameHub/asteroids">Asteroids</a><br>
 </body>
 </html>
