--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <a href="/GameHub/pacman">Pac-Man</a><br>
 <a href="/GameHub/chess">Chess</a><br>
 <a href="/GameHub/asteroids">Asteroids</a><br>
+<a href="/GameHub/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 </body>
 </html>
