--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href="/GameHub/chess">Chess</a><br>
 <a href="/GameHub/asteroids">Asteroids</a><br>
 <a href="/GameHub/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="/GameHub/2048">2048</a><br>
 </body>
 </html>
