--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <body>
 
 <h1>Play these games because they are unblocked for you.</h1>
-<a href="/GameHub/pacman">Pac-Man</a><br>
-<a href="/GameHub/chess">Chess</a><br>
-<a href="/GameHub/asteroids">Asteroids</a><br>
-<a href="/GameHub/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameHub/2048">2048</a><br>
+<a href="/GameHub/asteroids">Asteroids</a><br>
+<a href="/GameHub/chess">Chess</a><br>
+<a href="/GameHub/circus">Circus</a><br>
+<a href="/GameHub/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="/GameHub/pacman">Pac-Man</a><br>
 </body>
 </html>
