--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>YoloSwag3368's Game Hub</title>
+<title>GameLib</title>
 </head>
 <body>
-
 <h1>Play these games because they are unblocked for you.</h1>
-<a href="/GameHub/2048">2048</a><br>
-<a href="/GameHub/asteroids">Asteroids</a><br>
-<a href="/GameHub/chess">Chess</a><br>
-<a href="/GameHub/circus">Circus</a><br>
-<a href="/GameHub/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
-<a href="/GameHub/pacman">Pac-Man</a><br>
+<a href="/GameLib/2048">2048</a><br>
+<a href="/GameLib/asteroids">Asteroids</a><br>
+<a href="/GameLib/chess">Chess</a><br>
+<a href="/GameLib/circus">Circus</a><br>
+<a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="/GameLib/pacman">Pac-Man</a><br>
 </body>
 </html>
