--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href="/GameLib/chess">Chess</a><br>
 <a href="/GameLib/circus">Circus</a><br>
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="/GameLib/custom-tetris">Custom Tetris</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
 </body>
 </html>
