--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
+<a href="/GameLib/pong">Pong</a><br>
 </body>
 </html>
