--- a/index.html
+++ b/index.html
@@ -13,4 +13,9 @@
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
 </body>
+<footer>
+  <p>Please review this form!<br></p>
+  <p><a href="/GameLib/review.html">Click here to review.</a></p>
+</footer>
+
 </html>
