--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="/GameLib/pacman">Pac-Man</a><br>
 </body>
 <footer>
-  <p>Please review this form!<br></p>
+  <p>Please review this form!</p>
   <p><a href="/GameLib/review.html">Click here to review.</a></p>
 </footer>
 
