--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>GameLib</title>
+<link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
 </head>
 <body>
 <h1>Play these games because they are unblocked for you.</h1>
