--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="/GameLib/circus">Circus</a><br>
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
+<a href="/GameLib/fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
 <a href="/GameLib/retro-bowl">Retro Bowl</a><br>
 </body>
