--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
 <a href="/GameLib/fluid-table-tennis">Fluid Table Tennis</a><br>
+<a href="/GameLib/minecraft-classic">Minecraft Classic</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
 <a href="/GameLib/retro-bowl">Retro Bowl</a><br>
 </body>
 <footer>
-  <p>Please review this form!</p>
+  <p>Please review this site!</p>
   <p><a href="/GameLib/review.html">Click here to review.</a></p>
 </footer>
 
