--- a/minecraft-classic/index.html
+++ b/minecraft-classic/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Minecraft - By Nabil</title>
+    <title>Minecraft Classic</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="theme-color" content="#36393F">
         <meta property="og:image:url" content="https://i.ibb.co/crzLKF5/Untitled-1.png">
