--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <a href="/GameLib/mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="/GameLib/mcjs">Minecraft Javascript</a><br>
 <a href="/GameLib/pacman">Pac-Man</a><br>
+<a href="/GameLib/pacman-3d">Pac-Man 3D (experimental)</a><br>
 <a href="/GameLib/retro-bowl">Retro Bowl</a><br>
 </body>
 <footer>
