--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="/GameLib/circus">Circus</a><br>
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
+<a href="/GameLib/chrome-dino">Dinosaur Game</a><br>
 <a href="/GameLib/fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="/GameLib/mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="/GameLib/mcjs">Minecraft Javascript</a><br>
