--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
 </head>
 <body>
-<h1>Play these games because they are unblocked for you.</h1>
+<h1>Play these games because they are unblocked for you.<br>!!!ATTENTION!!! This site will be releasing to the public once it has 15 games. We need two more games. Recommend games using the form at the bottom.</h1>
 <a href="/GameLib/2048">2048</a><br>
 <a href="/GameLib/asteroids">Asteroids</a><br>
 <a href="/GameLib/chess">Chess</a><br>
