--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
 </head>
 <body>
-<h1>Play these games because they are unblocked for you.<br>!!!ATTENTION!!! This site will be releasing to the public once it has 15 games. We need only ONE MORE GAME! Recommend games using the form at the bottom.</h1>
+<h1>Play these games because they are unblocked for you.<br>!!!ATTENTION!!! This site will be releasing to the public effective friday, november 12.</h1>
 <a href="/GameLib/2048">2048</a><br>
 <a href="/GameLib/asteroids">Asteroids</a><br>
 <a href="/GameLib/chess">Chess</a><br>
 <a href="/GameLib/circus">Circus</a><br>
+<a href="/GameLib/cookie-clicker">Cookie Clicker</a><br>
 <a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="/GameLib/custom-tetris">Custom Tetris</a><br>
 <a href="/GameLib/chrome-dino">Dinosaur Game</a><br>
