--- a/cookie-clicker/index.html
+++ b/cookie-clicker/index.html
@@ -42,7 +42,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 <div id="wrapper">
 
 	<div id="topBar">
-		<div><b>Xenogames Unblocked Cookie Clicker</b>&trade; &copy; <a href="http://orteil.dashnet.org" target="_blank" id="topbarOrteil">Orteil</a>, 2019 - <a href="http://dashnet.org" target="_blank" id="topbarDashnet">DashNet</a></div>
+		<div><b>Cookie Clicker</b>&trade; &copy; <a href="http://orteil.dashnet.org" target="_blank" id="topbarOrteil">Orteil</a>, 2019 - <a href="http://dashnet.org" target="_blank" id="topbarDashnet">DashNet</a></div>
 		<div><a href="http://twitter.com/orteil42" target="_blank" id="topbarTwitter">twitter</a></div>
 		<div><a href="http://orteil42.tumblr.com" target="_blank" id="topbarTumblr">tumblr</a></div>
 		<!--<div><a href="http://forum.dashnet.org" target="_blank">Official forum</a></div>-->
@@ -57,11 +57,6 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			More  Links       
 			<div class="hoverable">
 			<a href="../" target="_blank" id="linkVersionLive">Live version</a>
-			<a href="https://sites.google.com/site/xenogame224/home/" target="_blank" id="linkVersionBeta">Xenogames</a>
-			<a href="http://arrasio-diepio.glitch.me/" target="_blank" id="linkVersionOld">Diep.io</a>
-			<a href="https://anothermkmirror.glitch.me/" target="_blank">Agar.io</a>
-      <a href="https://mkclassicmc.glitch.me//" target="_blank">Classic MC</a>
-        <a href="https://unblockedevrything.github.io/gba/launcher.html#pokemonemerald" target="_blank">Pokemon Emerald</a>
 			</div>
 		</div>
 	</div>
