--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href="/GameLib/pac-man">Pac-Man</a><br>
 <a href="/GameLib/pacman-3d">Pac-Man 3D (experimental)</a><br>
 <a href="/GameLib/retro-bowl">Retro Bowl</a><br>
+<a href="/GameLib/slope">Slope</a><br>
 <a href="/GameLib/spelunky">Spelunky</a><br>
 </body>
 <footer>
