--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <a href="/GameLib/run3">Run 3</a><br>
 <a href="/GameLib/slope">Slope</a><br>
 <a href="/GameLib/spelunky">Spelunky</a><br>
+<a href="/GameLib/vex5">Vex 5</a><br>
 </body>
 <footer>
   <p>Please review this site!</p>
