--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <a href="/GameLib/retro-bowl">Retro Bowl</a><br>
 <a href="/GameLib/run3">Run 3</a><br>
 <a href="/GameLib/slope">Slope</a><br>
+<a href="/GameLib/space-cadet-pinball">Space Cadet Pinball</a><br>
 <a href="/GameLib/spelunky">Spelunky</a><br>
 <a href="/GameLib/vex5">Vex 5</a><br>
 </body>
