--- a/404.html
+++ b/404.html
@@ -6,25 +6,25 @@
 </head>
 <body>
 <h1>Play these games because they are unblocked for you.<br>!!!ATTENTION!!! This site will be releasing to the public effective friday, november 12.</h1>
-<a href="/GameLib/2048">2048</a><br>
-<a href="/GameLib/asteroids">Asteroids</a><br>
-<a href="/GameLib/chess">Chess</a><br>
-<a href="/GameLib/circus">Circus</a><br>
-<a href="/GameLib/cookie-clicker">Cookie Clicker</a><br>
-<a href="/GameLib/crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
-<a href="/GameLib/custom-tetris">Custom Tetris</a><br>
-<a href="/GameLib/chrome-dino">Dinosaur Game</a><br>
-<a href="/GameLib/fluid-table-tennis">Fluid Table Tennis</a><br>
-<a href="/GameLib/mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
-<a href="/GameLib/mcjs">Minecraft Javascript</a><br>
-<a href="/GameLib/pac-man">Pac-Man</a><br>
-<a href="/GameLib/pacman-3d">Pac-Man 3D (experimental)</a><br>
-<a href="/GameLib/retro-bowl">Retro Bowl</a><br>
-<a href="/GameLib/run3">Run 3</a><br>
-<a href="/GameLib/slope">Slope</a><br>
-<a href="/GameLib/space-cadet-pinball">Space Cadet Pinball</a><br>
-<a href="/GameLib/spelunky">Spelunky</a><br>
-<a href="/GameLib/vex5">Vex 5</a><br>
+<a href="2048">2048</a><br>
+<a href="asteroids">Asteroids</a><br>
+<a href="chess">Chess</a><br>
+<a href="circus">Circus</a><br>
+<a href="cookie-clicker">Cookie Clicker</a><br>
+<a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="custom-tetris">Custom Tetris</a><br>
+<a href="chrome-dino">Dinosaur Game</a><br>
+<a href="fluid-table-tennis">Fluid Table Tennis</a><br>
+<a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
+<a href="mcjs">Minecraft Javascript</a><br>
+<a href="pac-man">Pac-Man</a><br>
+<a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
+<a href="retro-bowl">Retro Bowl</a><br>
+<a href="run3">Run 3</a><br>
+<a href="slope">Slope</a><br>
+<a href="space-cadet-pinball">Space Cadet Pinball</a><br>
+<a href="spelunky">Spelunky</a><br>
+<a href="vex5">Vex 5</a><br>
 </body>
 <footer>
   <p>Please review this site!</p>
