--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
 <a href="custom-tetris">Custom Tetris</a><br>
 <a href="chrome-dino">Dinosaur Game</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
+<a href="gba">GameBoy Advance Emulator</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="mcjs">Minecraft Javascript</a><br>
 <a href="pac-man">Pac-Man</a><br>
