--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
 <h1>Play these games because they are unblocked for you.<br>!!!ATTENTION!!! This site will be releasing to the public effective friday, november 12.</h1>
 <a href="2048">2048</a><br>
 <a href="asteroids">Asteroids</a><br>
+<a href="champion-island">Champin Island (Google Doodle Game)</a><br>
 <a href="chess">Chess</a><br>
 <a href="circus">Circus</a><br>
 <a href="cookie-clicker">Cookie Clicker</a><br>
