--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <p>
         If you're trying to publish one,
-        <a href="https://help.github.com/pages/">read the full documentation</a>
+        <a href="404.html">read the full documentation</a>
         to learn how to set up <strong>GitHub Pages</strong>
         for your repository, organization, or user account.
       </p>
