--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
 <a href="flappy-brid">Flappy Bird</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
+<a href="mario">Infinite Mario</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="mcjs">Minecraft Javascript</a><br>
 <a href="pac-man">Pac-Man</a><br>
