--- a/404.html
+++ b/404.html
@@ -15,8 +15,8 @@
 <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="custom-tetris">Custom Tetris</a><br>
 <a href="chrome-dino">Dinosaur Game</a><br>
-<a href="flappy-brid">Flappy Bird</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
+<a href="fnf">Friday Night Funkin'</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
 <a href="mario">Infinite Mario</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
