--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
 <a href="circus">Circus</a><br>
 <a href="cookie-clicker">Cookie Clicker</a><br>
 <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+<a href="cubefield">Cubefield</a><br>
 <a href="custom-tetris">Custom Tetris</a><br>
 <a href="chrome-dino">Dinosaur Game</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
