--- a/elastic-man/index.html
+++ b/elastic-man/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Elastic Face</title>
+        <title>Elastic Man</title>
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
