--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
 <a href="cubefield">Cubefield</a><br>
 <a href="custom-tetris">Custom Tetris</a><br>
 <a href="chrome-dino">Dinosaur Game</a><br>
+<a href="elastic-man">Elastic Man</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="fnf">Friday Night Funkin'</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
