--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="fnf">Friday Night Funkin'</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
+<a href="hexgl">HexGL</a><br>
 <a href="hextris">Hextris</a><br>
 <a href="mario">Infinite Mario</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
