--- a/404.html
+++ b/404.html
@@ -8,6 +8,8 @@
 
 <a href="2048">2048</a><br>
 <a href="asteroids">Asteroids</a><br>
+<a href="astray">Astray</a><br>
+<a href="breaklock">BreakLock</a><br>
 <a href="champion-island">Champion Island (Google Doodle Game)</a><br>
 <a href="chess">Chess</a><br>
 <a href="circus">Circus</a><br>
