--- a/404.html
+++ b/404.html
@@ -26,6 +26,7 @@
 <a href="hextris">Hextris</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="mcjs">Minecraft Javascript</a><br>
+<a href="ohh1">0hh1</a><br>
 <a href="pac-man">Pac-Man</a><br>
 <a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
 <a href="retro-bowl">Retro Bowl</a><br>
