--- a/404.html
+++ b/404.html
@@ -34,6 +34,7 @@
 <a href="space-cadet-pinball">Space Cadet Pinball</a><br>
 <a href="spelunky">Spelunky</a><br>
 <a href="vex5">Vex 5</a><br>
+<a href="weather-sim">Weather Simulator</a><br>
 </body>
 <footer>
   <p>Please review this site!</p>
