--- a/404.html
+++ b/404.html
@@ -24,6 +24,7 @@
 <a href="gba">GameBoy Advance Emulator</a><br>
 <a href="hexgl">HexGL</a><br>
 <a href="hextris">Hextris</a><br>
+<a href="kahoot-botter">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="mcjs">Minecraft Javascript</a><br>
 <a href="ohh1">0hh1</a><br>
