--- a/404.html
+++ b/404.html
@@ -3,6 +3,13 @@
 <head>
 <title>GameLib</title>
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
+<script src="darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
 </head>
 <body>
 
