--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
 <title>GameLib</title>
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
+<script>alert("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!");</script>
 <script src="darkmode-js.min.js"></script>
 <script>
   function addDarkmodeWidget() {
