--- a/404.html
+++ b/404.html
@@ -3,7 +3,9 @@
 <head>
 <title>GameLib</title>
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
-<script>confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!");</script>
+<script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
+  window.close();
+}</script>
 <script src="darkmode-js.min.js"></script>
 <script>
   function addDarkmodeWidget() {
