--- a/404.html
+++ b/404.html
@@ -22,6 +22,7 @@
 <a href="breaklock">BreakLock</a><br>
 <a href="champion-island">Champion Island (Google Doodle Game)</a><br>
 <a href="chess">Chess</a><br>
+<a href="chill-radio">Chill Radio</a><br>
 <a href="circus">Circus</a><br>
 <a href="cookie-clicker">Cookie Clicker</a><br>
 <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
