--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
 <a href="chill-radio">Chill Radio</a><br>
 <a href="circus">Circus</a><br>
 <a href="cookie-clicker">Cookie Clicker</a><br>
+<a href="cookieclicker">NEW Cookie Clicker</a><br>
 <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
 <a href="cubefield">Cubefield</a><br>
 <a href="custom-tetris">Custom Tetris</a><br>
