--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 </script>
 </head>
 <body>
-  <h1>ATTENTION! If you play Cookie Clicker, then click </h1><a href="cookie.html">here</a>
+  <h1>ATTENTION! If you play Cookie Clicker, then click <a href="cookie.html">here</a>.</h1>
 <a href="2048">2048</a><br>
 <a href="asteroids">Asteroids</a><br>
 <a href="astray">Astray</a><br>
