--- a/404.html
+++ b/404.html
@@ -32,6 +32,7 @@
 <a href="chrome-dino">Dinosaur Game</a><br>
 <a href="elastic-man">Elastic Man</a><br>
 <a href="flappy-bird">Flappy Bird</a><br>
+<a href="fluid-simulation">Fluid Simulation</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
 <a href="fnf">Friday Night Funkin'</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
