--- a/404.html
+++ b/404.html
@@ -16,6 +16,8 @@
 </head>
 <body>
   <h1>ATTENTION! If you play Cookie Clicker, then click <a href="cookie.html">here</a>.</h1>
+<a href="0hn0">0hn0</a><br>
+<a href="ohh1">0hh1</a><br>
 <a href="2048">2048</a><br>
 <a href="asteroids">Asteroids</a><br>
 <a href="astray">Astray</a><br>
@@ -41,7 +43,6 @@
 <a href="kahoot-botter">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</a><br>
 <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
 <a href="mcjs">Minecraft Javascript</a><br>
-<a href="ohh1">0hh1</a><br>
 <a href="pac-man">Pac-Man</a><br>
 <a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
 <a href="retro-bowl">Retro Bowl</a><br>
