--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 <a href="flappy-bird">Flappy Bird</a><br>
 <a href="fluid-simulation">Fluid Simulation</a><br>
 <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
-<a href="fnf">Friday Night Funkin'</a><br>
+<a href="fnf-week7">Friday Night Funkin'</a><br>
 <a href="gba">GameBoy Advance Emulator</a><br>
 <a href="hexgl">HexGL</a><br>
 <a href="hextris">Hextris</a><br>
