--- a/gba/index.html
+++ b/gba/index.html
@@ -40,6 +40,7 @@
 			<li><a href="./launcher.html#iridion">Iridion 3D</a></li>
             <li><a href="./launcher.html#kirbymirror">Kirby &amp; The Amazing Mirror</a></li>
             <li><a href="./launcher.html#kirbynightmare">Kirby: Nightmare in Dreamland</a></li>
+		<li><a href="./launcher.html#konamikrazyracers">Konami Krazy Racers</a></li>
             <li><a href="./launcher.html#superstar">Mario &amp; Luigi: Superstar Saga</a></li>
             <li><a href="./launcher.html#mariokart">Mario Kart: Super Circuit</a></li>
             <li><a href="./launcher.html#marioparty">Mario Party Advance</a></li>
