--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <title>GameLib</title>
 <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="apple-touch-icon" href="favicon.png">
 <script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
   window.close();
 }</script>
