--- a/powder-game/dust2.html
+++ b/powder-game/dust2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><HTML LANG="en"><HEAD>
-<TITLE>Powder Game 2 - Download/Play</TITLE>
+<TITLE>Powder Game 2</TITLE>
 <BODY bgcolor="#000000"> 
 <style>
 h1   {color:#FF0000}
@@ -11,10 +11,7 @@ p    {color:#FFFFFF}
 var src_ck=cookie_get('user');
 Init(src_ck[3],1,"");
 --></SCRIPT>
-<p CLASS="F2">This is the HTML5 Powder Game 2 ver 8.4 from dan-ball.jp <br>
-  I have modified the code to run on any website, hence why it is working here.</p>
-<p CLASS="F2">If you want to download the modified version, I'll leave a link <a href="Dust Collection.zip">here</a><br>
-  <a href="https://dan-ball.jp/en/javagame/dust2/">Dan-Ball Website</a> / <a href="../">Return to Forums</a> / <a href="dust.html">Powder Game</a></p>
+  <a href="https://dan-ball.jp/en/javagame/dust2/">Dan-Ball Website</a> / <a href="dust.html">Powder Game</a></p>
 </DIV>
 <BR></CENTER>
 
