--- a/powder-game/dust.html
+++ b/powder-game/dust.html
@@ -11,10 +11,8 @@ p    {color:#FFFFFF}
 var src_ck=cookie_get('user');
 Init(src_ck[3],1,"");
 --></SCRIPT>
-<p CLASS="F2">This is the HTML5 Powder Game ver 9.3 from dan-ball.jp <br>
-  I have modified the code to run on any website, hence why it is working here.</p>
-<p CLASS="F2">If you want to download the modified version, I'll leave a link <a href="Dust Collection.zip">here</a><br>
-  <a href="https://dan-ball.jp/en/javagame/dust/">Dan-Ball Website</a> / <a href="../">Return to Forums</a> / <a href="dust2.html">Powder Game 2</a></p>
+
+  <a href="https://dan-ball.jp/en/javagame/dust/">Dan-Ball Website</a> / <a href="dust2.html">Powder Game 2</a></p>
 </DIV>
 <BR></CENTER>
 
