--- a/404.html
+++ b/404.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>GameLib</title>
-<link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
-<link rel="apple-touch-icon" href="favicon.png">
-<script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
-  window.close();
-}</script>
-<script src="darkmode-js.min.js"></script>
-<script>
-  function addDarkmodeWidget() {
-    new Darkmode().showWidget();
-  }
-  window.addEventListener('load', addDarkmodeWidget);
-</script>
-</head>
-<body>
-<a href="0hn0">0hn0</a><br>
-<a href="ohh1">0hh1</a><br>
-<a href="2048">2048</a><br>
-<a href="asteroids">Asteroids</a><br>
-<a href="astray">Astray</a><br>
-<a href="breaklock">BreakLock</a><br>
-<a href="champion-island">Champion Island (Google Doodle Game)</a><br>
-<a href="chess">Chess</a><br>
-<a href="chill-radio">Chill Radio</a><br>
-<a href="circus">Circus</a><br>
-<a href="cookieclicker">Cookie Clicker</a><br>
-<a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
-<a href="cubefield">Cubefield</a><br>
-<a href="custom-tetris">Custom Tetris</a><br>
-<a href="chrome-dino">Dinosaur Game</a><br>
-<a href="elastic-man">Elastic Man</a><br>
-<a href="flappy-bird">Flappy Bird</a><br>
-<a href="fluid-simulation">Fluid Simulation</a><br>
-<a href="fluid-table-tennis">Fluid Table Tennis</a><br>
-<a href="fnf-week7">Friday Night Funkin'</a><br>
-<a href="gba">GameBoy Advance Emulator</a><br>
-<a href="hexgl">HexGL</a><br>
-<a href="hextris">Hextris</a><br>
-<a href="kahoot-botter">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</a><br>
-<a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
-<a href="mcjs">Minecraft Javascript</a><br>
-<a href="pac-man">Pac-Man</a><br>
-<a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
-<a href="racing-game">Racing Game</a><br>
-<a href="retro-bowl">Retro Bowl</a><br>
-<a href="slope">Slope</a><br>
-<a href="space-cadet-pinball">Space Cadet Pinball</a><br>
-<a href="spelunky">Spelunky</a><br>
-<a href="vex5">Vex 5</a><br>
-<a href="weather-sim">Weather Simulator</a><br>
-</body>
-<footer>
-  <p>Please review this site!</p>
-  <p><a href="/GameLib/review.html">Click here to review.</a></p>
-</footer>
+  <head>
+    <title>GameLib</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
+    <link rel="apple-touch-icon" href="favicon.png">
+    <script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
+      window.close();
+    }</script>
+    <script src="darkmode-js.min.js"></script>
+    <script>
+      function addDarkmodeWidget() {
+        new Darkmode().showWidget();
+      }
+      window.addEventListener('load', addDarkmodeWidget);
+    </script>
+  </head>
+  <body>
+    <a href="0hn0">0hn0</a><br>
+    <a href="ohh1">0hh1</a><br>
+    <a href="2048">2048</a><br>
+    <a href="asteroids">Asteroids</a><br>
+    <a href="astray">Astray</a><br>
+    <a href="breaklock">BreakLock</a><br>
+    <a href="champion-island">Champion Island (Google Doodle Game)</a><br>
+    <a href="chess">Chess</a><br>
+    <a href="chill-radio">Chill Radio</a><br>
+    <a href="circus">Circus</a><br>
+    <a href="cookieclicker">Cookie Clicker</a><br>
+    <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
+    <a href="cubefield">Cubefield</a><br>
+    <a href="custom-tetris">Custom Tetris</a><br>
+    <a href="chrome-dino">Dinosaur Game</a><br>
+    <a href="elastic-man">Elastic Man</a><br>
+    <a href="flappy-bird">Flappy Bird</a><br>
+    <a href="fluid-simulation">Fluid Simulation</a><br>
+    <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
+    <a href="fnf-week7">Friday Night Funkin'</a><br>
+    <a href="gba">GameBoy Advance Emulator</a><br>
+    <a href="hexgl">HexGL</a><br>
+    <a href="hextris">Hextris</a><br>
+    <a href="kahoot-botter">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</a><br>
+    <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
+    <a href="mcjs">Minecraft Javascript</a><br>
+    <a href="pac-man">Pac-Man</a><br>
+    <a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
+    <a href="powder-game/dust2.html">Powder Game 2</a>
+    <a href="racing-game">Racing Game</a><br>
+    <a href="retro-bowl">Retro Bowl</a><br>
+    <a href="slope">Slope</a><br>
+    <a href="space-cadet-pinball">Space Cadet Pinball</a><br>
+    <a href="spelunky">Spelunky</a><br>
+    <a href="vex5">Vex 5</a><br>
+    <a href="weather-sim">Weather Simulator</a><br>
+  </body>
+  <footer>
+    <p>Please review this site!</p>
+    <p><a href="/GameLib/review.html">Click here to review.</a></p>
+  </footer>
 </html>
