--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Study Lab</title>
     <script>
       if(prompt("Enter a username here")=="letsgostudy6969"){
         window.location.replace("69.html");
       }
     </script>
-  </head
+  </head>
+  <body>
+    
+  </body>
+  <html>
