--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
     <a href="mcjs">Minecraft Javascript</a><br>
     <a href="pac-man">Pac-Man</a><br>
     <a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
-    <a href="powder-game/dust2.html">Powder Game 2</a>
+    <a href="powder-game/dust2.html">Powder Game 2</a><br>
     <a href="racing-game">Racing Game</a><br>
     <a href="retro-bowl">Retro Bowl</a><br>
     <a href="slope">Slope</a><br>
