--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </script>
   </head>
   <body>
-    
+    <img src="study lab.jpg" alt="Study Lab" width="100%" height="100%"></img>
   </body>
   <html>
