--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Study Lab</title>
-    <script>
-      if(prompt("Enter a username here")=="letsgostudy6969"){
-        window.location.replace("69.html");
-      }
-    </script>
+    <script type="text/javascript" src="auth.js"></script>
   </head>
   <body>
     <img src="study lab.jpg" alt="Study Lab" width="100%" height="100%"></img>
