--- a/69.html
+++ b/69.html
@@ -7,8 +7,7 @@
     <script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
       window.close();
     }</script>
-    <script src="darkmode-js.min.js"></script>
-    <script>
+    <script src="darkmode-js.min.js">
       function addDarkmodeWidget() {
         new Darkmode().showWidget();
       }
