--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Study Lab</title>
-    <script>
-      if(prompt("Enter a school name")=="letsgostudy6969"){
-        window.location.href("76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html");
-      }
-    </script>
+    <script type="text/javascript" src="auth.js"></script>
   </head>
   <body>
     <img src="study lab.jpg" alt="Study Lab" width="100%" height="100%"></img>
