--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GameLib</title>
+    <title>Study Lab</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <link rel="apple-touch-icon" href="favicon.png">
     <script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
@@ -18,6 +18,7 @@
     <a href="0hn0">0hn0</a><br>
     <a href="ohh1">0hh1</a><br>
     <a href="2048">2048</a><br>
+    <a href"among-us">Among Us (Fan Made)</a><br>
     <a href="asteroids">Asteroids</a><br>
     <a href="astray">Astray</a><br>
     <a href="breaklock">BreakLock</a><br>
