--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -18,7 +18,7 @@
     <a href="0hn0">0hn0</a><br>
     <a href="ohh1">0hh1</a><br>
     <a href="2048">2048</a><br>
-    <a href"among-us">Among Us (Fan Made)</a><br>
+    <a href="among-us">Among Us (Fan Made)</a><br>
     <a href="asteroids">Asteroids</a><br>
     <a href="astray">Astray</a><br>
     <a href="breaklock">BreakLock</a><br>
