--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Study Lab</title>
+    <style>
+      a {
+        color: black;
+        text-align: center;
+      }
+    </style>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <link rel="apple-touch-icon" href="favicon.png">
     <script>if(!confirm("WARNING! I am not responsible for any trouble caused by this website. Use at your OWN RISK!")){
