--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -3,9 +3,10 @@
   <head>
     <title>Study Lab</title>
     <style>
-      a {
+      button {
         color: black;
         text-align: center;
+        text-decoration: none;
       }
     </style>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
@@ -21,7 +22,7 @@
     </script>
   </head>
   <body>
-    <a href="0hn0">0hn0</a><br>
+    <a href="0hn0"><button type="button">0hn0</button></a><br>
     <a href="ohh1">0hh1</a><br>
     <a href="2048">2048</a><br>
     <a href="among-us">Among Us (Fan Made)</a><br>
