--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -22,46 +22,46 @@
     </script>
   </head>
   <body>
-    <a href="0hn0"><button type="button">0hn0</button></a><br>
-    <a href="ohh1">0hh1</a><br>
-    <a href="2048">2048</a><br>
-    <a href="among-us">Among Us (Fan Made)</a><br>
-    <a href="asteroids">Asteroids</a><br>
-    <a href="astray">Astray</a><br>
-    <a href="breaklock">BreakLock</a><br>
-    <a href="champion-island">Champion Island (Google Doodle Game)</a><br>
-    <a href="chess">Chess</a><br>
-    <a href="chill-radio">Chill Radio</a><br>
-    <a href="circus">Circus</a><br>
-    <a href="cookieclicker">Cookie Clicker</a><br>
-    <a href="crappy-bird">Crappy Bird (Basically Flappy Bird)</a><br>
-    <a href="cubefield">Cubefield</a><br>
-    <a href="custom-tetris">Custom Tetris</a><br>
-    <a href="chrome-dino">Dinosaur Game</a><br>
-    <a href="elastic-man">Elastic Man</a><br>
-    <a href="flappy-bird">Flappy Bird</a><br>
-    <a href="fluid-simulation">Fluid Simulation</a><br>
-    <a href="fluid-table-tennis">Fluid Table Tennis</a><br>
-    <a href="fnf-week7">Friday Night Funkin'</a><br>
-    <a href="gba">GameBoy Advance Emulator</a><br>
-    <a href="hexgl">HexGL</a><br>
-    <a href="hextris">Hextris</a><br>
-    <a href="kahoot-botter">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</a><br>
-    <a href="mc-classic">Minecraft Classic (recommended over MC Javascript)</a><br>
-    <a href="mcjs">Minecraft Javascript</a><br>
-    <a href="pac-man">Pac-Man</a><br>
-    <a href="pacman-3d">Pac-Man 3D (experimental)</a><br>
-    <a href="powder-game/dust2.html">Powder Game 2</a><br>
-    <a href="racing-game">Racing Game</a><br>
-    <a href="retro-bowl">Retro Bowl</a><br>
-    <a href="slope">Slope</a><br>
-    <a href="space-cadet-pinball">Space Cadet Pinball</a><br>
-    <a href="spelunky">Spelunky</a><br>
-    <a href="vex5">Vex 5</a><br>
-    <a href="weather-sim">Weather Simulator</a><br>
+    <a href="0hn0"><button type="button">0hn0</button></button></a><br>
+    <a href="ohh1"><button type="button">0hh1</button></button></a><br>
+    <a href="2048"><button type="button">2048</button></button></a><br>
+    <a href="among-us"><button type="button">Among Us (Fan Made)</button></button></a><br>
+    <a href="asteroids"><button type="button">Asteroids</button></button></a><br>
+    <a href="astray"><button type="button">Astray</button></button></a><br>
+    <a href="breaklock"><button type="button">BreakLock</button></button></a><br>
+    <a href="champion-island"><button type="button">Champion Island (Google Doodle Game)</button></button></a><br>
+    <a href="chess"><button type="button">Chess</button></button></a><br>
+    <a href="chill-radio"><button type="button">Chill Radio</button></button></a><br>
+    <a href="circus"><button type="button">Circus</button></button></a><br>
+    <a href="cookieclicker"><button type="button">Cookie Clicker</button></button></a><br>
+    <a href="crappy-bird"><button type="button">Crappy Bird (Basically Flappy Bird)</button></button></a><br>
+    <a href="cubefield"><button type="button">Cubefield</button></button></a><br>
+    <a href="custom-tetris"><button type="button">Custom Tetris</button></button></a><br>
+    <a href="chrome-dino"><button type="button">Dinosaur Game</button></button></a><br>
+    <a href="elastic-man"><button type="button">Elastic Man</button></button></a><br>
+    <a href="flappy-bird"><button type="button">Flappy Bird</button></button></a><br>
+    <a href="fluid-simulation"><button type="button">Fluid Simulation</button></button></a><br>
+    <a href="fluid-table-tennis"><button type="button">Fluid Table Tennis</button></button></a><br>
+    <a href="fnf-week7"><button type="button">Friday Night Funkin'</button></button></a><br>
+    <a href="gba"><button type="button">GameBoy Advance Emulator</button></button></a><br>
+    <a href="hexgl"><button type="button">HexGL</button></button></a><br>
+    <a href="hextris"><button type="button">Hextris</button></button></a><br>
+    <a href="kahoot-botter"><button type="button">Kahoot Botter (I am not responsible for any trouble caused by this. Use at you own risk.)</button></a><br>
+    <a href="mc-classic"><button type="button">Minecraft Classic (recommended over MC Javascript)</button></a><br>
+    <a href="mcjs"><button type="button">Minecraft Javascript</button></a><br>
+    <a href="pac-man"><button type="button">Pac-Man</button></a><br>
+    <a href="pacman-3d"><button type="button">Pac-Man 3D (experimental)</button></a><br>
+    <a href="powder-game/dust2.html"><button type="button">Powder Game 2</button></a><br>
+    <a href="racing-game"><button type="button">Racing Game</button></a><br>
+    <a href="retro-bowl"><button type="button">Retro Bowl</button></a><br>
+    <a href="slope"><button type="button">Slope</button></a><br>
+    <a href="space-cadet-pinball"><button type="button">Space Cadet Pinball</button></a><br>
+    <a href="spelunky"><button type="button">Spelunky</button></a><br>
+    <a href="vex5"><button type="button">Vex 5</button></a><br>
+    <a href="weather-sim"><button type="button">Weather Simulator</button></a><br>
   </body>
   <footer>
     <p>Please review this site!</p>
-    <p><a href="/GameLib/review.html">Click here to review.</a></p>
+    <p><a href="/GameLib/review.html"><button type="button"> here to review.</button></a></p>
   </footer>
 </html>
