--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -4,6 +4,11 @@
     <title>Study Lab</title>
     <style>
       a {
+        color: white;
+        text-align: center;
+        text-decoration: none;
+      }
+      button {
         color: black;
         text-align: center;
         text-decoration: none;
