--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -3,12 +3,12 @@
   <head>
     <title>Study Lab</title>
     <style>
-      a {
-        color: white;
+      .game-links {
+        color: black;
         text-align: center;
         text-decoration: none;
       }
-      button {
+      footer {
         color: black;
         text-align: center;
         text-decoration: none;
@@ -27,6 +27,7 @@
     </script>
   </head>
   <body>
+    <div class="game-links">
     <a href="0hn0"><button type="button">0hn0</button></button></a><br><br>
     <a href="ohh1"><button type="button">0hh1</button></button></a><br><br>
     <a href="2048"><button type="button">2048</button></button></a><br><br>
@@ -64,9 +65,10 @@
     <a href="spelunky"><button type="button">Spelunky</button></a><br><br>
     <a href="vex5"><button type="button">Vex 5</button></a><br><br>
     <a href="weather-sim"><button type="button">Weather Simulator</button></a><br><br>
+  </div>
   </body>
   <footer>
     <p>Please review this site!</p>
-    <p><a href="/GameLib/review.html"><button type="button"> here to review.</button></a></p>
+    <p><a href="/GameLib/review.html"><button type="button">Click here to review.</button></a></p>
   </footer>
 </html>
