--- a/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
+++ b/76cbt4r863g2br797tg8n387rgftynmg3y87tg3n8yg3rn83ryngvrf8y3ygrvfbns8ygr3gnfv8yr3.html
@@ -7,11 +7,16 @@
         color: black;
         text-align: center;
         text-decoration: none;
+        background: #5555FF;
+      }
+      button {
+        background-color: #00FF00;
       }
       footer {
         color: black;
         text-align: center;
         text-decoration: none;
+        background: #55FF55;
       }
     </style>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
