--- a/bunker/launcher.html
+++ b/bunker/launcher.html
@@ -61,7 +61,7 @@
 			}
 			function kill(){
 				if(document.getElementById("killsw").value == "1"){
-					window.location.replace('https://classroom.google.com/u/0/h');
+					window.location.replace('https://zxhzj.github.io/bunker/launcher.html');
 				}
 			}
 			function initB(){
