--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -9,6 +9,7 @@
     <title>Possum</title>
     <script src="playcanvas-stable.min.js"></script>
     <script src="__settings__.js"></script>
+    <script src="__modules__.js"></script>
 </head>
 <body>
     <script src="__start__.js"></script>
