--- a/powder-game/dust2.html
+++ b/powder-game/dust2.html
@@ -5,13 +5,12 @@
 h1   {color:#FF0000}
 p    {color:#FFFFFF}
 </style>
-<CENTER><META NAME="viewport" CONTENT="width=device-width,initial-scale=1"><SCRIPT SRC="java.js?61" TYPE="text/javascript"></SCRIPT></head><H1 CLASS="F2">- Powder Game 2 ver 8.4 -</H1><BR>
+<CENTER><META NAME="viewport" CONTENT="width=device-width,initial-scale=1"><SCRIPT SRC="java.js?61" TYPE="text/javascript"></SCRIPT></head>
 <DIV>
 <CANVAS ID="cv"></CANVAS><SCRIPT SRC="dust2.js" TYPE="text/javascript"></SCRIPT><SCRIPT TYPE="text/javascript"><!--
 var src_ck=cookie_get('user');
 Init(src_ck[3],1,"");
 --></SCRIPT>
-  <a href="https://dan-ball.jp/en/javagame/dust2/">Dan-Ball Website</a> / <a href="dust.html">Powder Game</a></p>
 </DIV>
 <BR></CENTER>
 
